feat(baseline): add fuzz4all